Добавление проекта Infrastructure и проекта BLLServices.   Добавление проекта Infrastructure с файлами BookStoreContext.cs,  Repositories, ProductRepository.cs, CartItemRepository.csБ OrderRepository.cs  для реализации интерфейсов доменного слоя DAL.  Файл DbInitializer.cs для инициализайии БД по типу EF Code-First.                 Добавление проекта BLLServices с файлами  ProductService.cs, CartItemService.cs,  OrderService.cs  для реализации интерфейсов сервисного слоя BLL.

--- a/BookStore.Server.API/BookStore.Server.API.csproj
+++ b/BookStore.Server.API/BookStore.Server.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -12,7 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookStore.Server.BLLServices\BookStore.Server.BLLServices.csproj" />
     <ProjectReference Include="..\BookStore.Server.BLL\BookStore.Server.BLL.csproj" />
+    <ProjectReference Include="..\BookStore.Server.Infrastructure\BookStore.Server.Infrastructure.csproj" />
   </ItemGroup>
 
 
