В apsetings.json заменил connection string для подключения к БД на хосте Smarterasp.net

--- a/BookStore.Server.API/appsettings.json
+++ b/BookStore.Server.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=bookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=GOLDINPC;Database=BookSaleSqlDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=SQL8001.site4now.net,1433;Initial Catalog=db_a866d6_bookstoredb;User Id=db_a866d6_bookstoredb_admin;Password=2022Smarterdb"
   },
   "Logging": {
     "LogLevel": {
