--- a/BookStore.Server.API/appsettings.json
+++ b/BookStore.Server.API/appsettings.json
@@ -1,9 +1,6 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=GOLDINPC;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true" // :)))
-    //"DefaultConnection": "Data Source=SQL8001.site4now.net,1433;Initial Catalog=db_a866d6_bookstoredb;User Id=db_a866d6_bookstoredb_admin;Password=2022Smarterdb"
-    "DefaultConnection": "workstation id=BookSaleSqlDb.mssql.somee.com;packet size=4096;user id=siteBookSale_SQLLogin_1;pwd=8mqg2b6ckm;data source=BookSaleSqlDb.mssql.somee.com;persist security info=False;initial catalog=BookSaleSqlDb"// :)))
-    //"DefaultConnection":"workstation id=BookStoreDatabBase.mssql.somee.com;packet size=4096;user id=StoreSiteBackend_SQLLogin_2;pwd=cks8pgi5c8;data source=BookStoreDatabBase.mssql.somee.com;persist security info=False;initial catalog=BookStoreDatabBase"// :)))
+    "DefaultConnection": "workstation id=BookSaleSqlDb.mssql.somee.com;packet size=4096;user id=siteBookSale_SQLLogin_1;pwd=8mqg2b6ckm;data source=BookSaleSqlDb.mssql.somee.com;persist security info=False;initial catalog=BookSaleSqlDb"
   },
   "Logging": {
     "LogLevel": {
