--- a/BookStore.Server.API/appsettings.json
+++ b/BookStore.Server.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "workstation id=BookSaleSqlDb.mssql.somee.com;packet size=4096;user id=siteBookSale_SQLLogin_1;pwd=8mqg2b6ckm;data source=BookSaleSqlDb.mssql.somee.com;persist security info=False;initial catalog=BookSaleSqlDb"
+    "DefaultConnection": "workstation id=BookSaleSqlDb.mssql.somee.com;packet size=4096;user id=siteBookSale_SQLLogin_1;pwd=8mqg2b6ckm;data source=BookSaleSqlDb.mssql.somee.com;persist security info=False;initial catalog=BookSaleSqlDb"   // :)))
+    //"DefaultConnection": "Server=GOLDINPC;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true" // :)))
   },
   "Logging": {
     "LogLevel": {
